# contract-intelligence-platform

./: .gcloudignore  .gitignore  README.md  app.yaml  env.py  main.py  pyproject.toml  requirements.txt
.github/: copilot-instructions.md
.github/workflows/: client.yml  main.yml
.kilocode/rules/memory-bank/: architecture.md  brief.md  context.md  (+2 more)
agent/: agent.py  dal.py  prompts.py  schemas.py  tools.py  utils.py
api/: agent_router.py  contract_router.py  routes.py  schemas.py  user_router.py  utils.py
api_testing/: bruno.json  collection.bru
api_testing/agent/: call_agent.bru  create_agent.bru  delete_agent.bru  folder.bru  get_agent.bru  get_all_agents.bru  stream_agent.bru
api_testing/contracts/: fill_contract.bru  folder.bru  get_all_contracts.bru  get_contract.bru  get_contract_md.bru  get_contract_pdf.bru  get_contract_unval.bru  get_validation_report.bru  upload_contract.bru  validate_contract.bru
api_testing/environments/: cip_env.bru
api_testing/user/: get_user.bru  logout_user.bru  signin.bru
client/: .gcloudignore  app.yaml  package.json  pnpm-lock.yaml  tsconfig.app.json  vite.config.ts
client/src/: App.tsx  agent-schemas.ts  cache-queries.ts  contract-schemas.ts  index.css  main.tsx  oidc-config.ts  schemas.ts  schemas.tsx
config/: log_config.py
connectors/: chromadb_connector.py  firestore_connector.py  gcs_connector.py
contracts/: dal.py  generate_contracts.py  prompts.py  schemas.py
database/: storage.py  vector.py
model/: extract.py  fill.py  validate.py
sessions/: dal.py  schemas.py  utils.py
user/: dal.py  schemas.py
(+24 files in other folders)
